@@ -6,6 +6,8 @@ os-prober (1.09) UNRELEASED; urgency=low
     is missing.
   * Look for partitions in /sys/block if /dev/discs isn't present.
   * Add /usr/share/common-licenses/GPL reference to debian/copyright.
+  * Rename os-prober to os-prober-udeb (leaving a Provides: behind) and
+    create an os-prober deb.
 
  -- Colin Watson <cjwatson@debian.org>  Tue,  6 Dec 2005 23:08:00 +0000
 
